--- a/src/sass/frameworks/_bootstrap.scss
+++ b/src/sass/frameworks/_bootstrap.scss
@@ -8,11 +8,8 @@
 @import "bootstrap/mixins";
 
 // Core CSS
- @import "bootstrap/scaffolding";
- @import "bootstrap/type";
- @import "bootstrap/code";
+// @import "bootstrap/type";
 @import "bootstrap/grid";
-// @import "bootstrap/buttons";
 
 // Components
 @import "bootstrap/alerts";
