--- a/src/sass/_reset.scss
+++ b/src/sass/_reset.scss
@@ -93,4 +93,12 @@ q:after {
 	content: "";
 }
 
+// Reset the box-sizing
+* {
+	@include box-sizing(border-box);
+}
 
+*:before,
+*:after {
+	@include box-sizing(border-box);
+}
