--- a/src/sass/mixins/_mixins.scss
+++ b/src/sass/mixins/_mixins.scss
@@ -351,3 +351,32 @@ Mixins File for Wordpress Theme FAU
     }
 }
 
+
+// Opacity
+
+@mixin opacity($opacity) {
+  opacity: $opacity;
+  // IE8 filter
+  $opacity-ie: ($opacity * 100);
+  filter: alpha(opacity=$opacity-ie);
+}
+
+
+// from _vendor-prefixes.scss:
+
+// User select
+// For selecting text on the page
+
+@mixin user-select($select) {
+          user-select: $select;
+}
+
+
+// Box sizing
+@mixin box-sizing($boxmodel) {
+          box-sizing: $boxmodel;
+}
+
+@mixin box-shadow($shadow...) {
+          box-shadow: $shadow;
+}
