--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /*!
 Theme Name: FAU-Einrichtungen
-Version: 2.0.42-5
+Version: 2.0.42-6
 Requires at least: 5.8
 Tested up to: 6.0
 Requires PHP: 7.4
@@ -170,6 +170,9 @@ Text Domain: fau
   --color-menulink-hover-bg: #004A9F;
 }
 
+/*
+Mixins File for Wordpress Theme FAU
+*/
 /*-----------------------------------------------------------------------------------*/
 /* Resets styles to base
 /*-----------------------------------------------------------------------------------*/
@@ -254,6 +257,15 @@ q:after {
   content: "";
 }
 
+* {
+  box-sizing: border-box;
+}
+
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+
 /*-----------------------------------------------------------------------------------*/
 /* Frameworks
 /*-----------------------------------------------------------------------------------*/
@@ -278,246 +290,6 @@ and open the template in the editor.
     Created on : 06.12.2019, 12:28:59
     Author     : unrz59
 */
-* {
-  box-sizing: border-box;
-}
-
-*:before,
-*:after {
-  box-sizing: border-box;
-}
-
-mark,
-.mark {
-  background-color: #fcf8e3;
-  padding: 0.2em;
-}
-
-.text-left {
-  text-align: left;
-}
-
-.text-right {
-  text-align: right;
-}
-
-.text-center {
-  text-align: center;
-}
-
-.text-justify {
-  text-align: justify;
-}
-
-.text-nowrap {
-  white-space: nowrap;
-}
-
-.text-lowercase {
-  text-transform: lowercase;
-}
-
-.text-uppercase, .initialism {
-  text-transform: uppercase;
-}
-
-.text-capitalize {
-  text-transform: capitalize;
-}
-
-.text-muted {
-  color: #777777;
-}
-
-.text-primary {
-  color: #337ab7;
-}
-
-a.text-primary:hover,
-a.text-primary:focus {
-  color: #286090;
-}
-
-.text-success {
-  color: #3c763d;
-}
-
-a.text-success:hover,
-a.text-success:focus {
-  color: #2b542c;
-}
-
-.text-info {
-  color: #31708f;
-}
-
-a.text-info:hover,
-a.text-info:focus {
-  color: #245269;
-}
-
-.text-warning {
-  color: #8a6d3b;
-}
-
-a.text-warning:hover,
-a.text-warning:focus {
-  color: #66512c;
-}
-
-.text-danger {
-  color: #a94442;
-}
-
-a.text-danger:hover,
-a.text-danger:focus {
-  color: #843534;
-}
-
-.bg-primary {
-  color: #fff;
-}
-
-.bg-primary {
-  background-color: #337ab7;
-}
-
-a.bg-primary:hover,
-a.bg-primary:focus {
-  background-color: #286090;
-}
-
-.bg-success {
-  background-color: #dff0d8;
-}
-
-a.bg-success:hover,
-a.bg-success:focus {
-  background-color: #c1e2b3;
-}
-
-.bg-info {
-  background-color: #d9edf7;
-}
-
-a.bg-info:hover,
-a.bg-info:focus {
-  background-color: #afd9ee;
-}
-
-.bg-warning {
-  background-color: #fcf8e3;
-}
-
-a.bg-warning:hover,
-a.bg-warning:focus {
-  background-color: #f7ecb5;
-}
-
-.bg-danger {
-  background-color: #f2dede;
-}
-
-a.bg-danger:hover,
-a.bg-danger:focus {
-  background-color: #e4b9b9;
-}
-
-.dl-horizontal dd:before, .dl-horizontal dd:after {
-  content: " ";
-  display: table;
-}
-.dl-horizontal dd:after {
-  clear: both;
-}
-@media (min-width: 768px) {
-  .dl-horizontal dt {
-    float: left;
-    width: 160px;
-    clear: left;
-    text-align: right;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-  }
-  .dl-horizontal dd {
-    margin-left: 180px;
-  }
-}
-
-.initialism {
-  font-size: 90%;
-}
-
-blockquote p:last-child,
-blockquote ul:last-child,
-blockquote ol:last-child {
-  margin-bottom: 0;
-}
-blockquote footer,
-blockquote small,
-blockquote .small {
-  display: block;
-  font-size: 80%;
-  line-height: 1.5;
-  color: #777777;
-}
-blockquote footer:before,
-blockquote small:before,
-blockquote .small:before {
-  content: "— ";
-}
-
-.blockquote-reverse,
-blockquote.pull-right {
-  padding-right: 15px;
-  padding-left: 0;
-  border-right: 5px solid #eeeeee;
-  border-left: 0;
-  text-align: right;
-}
-.blockquote-reverse footer:before,
-.blockquote-reverse small:before,
-.blockquote-reverse .small:before,
-blockquote.pull-right footer:before,
-blockquote.pull-right small:before,
-blockquote.pull-right .small:before {
-  content: "";
-}
-.blockquote-reverse footer:after,
-.blockquote-reverse small:after,
-.blockquote-reverse .small:after,
-blockquote.pull-right footer:after,
-blockquote.pull-right small:after,
-blockquote.pull-right .small:after {
-  content: " —";
-}
-
-kbd,
-samp {
-  font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
-}
-
-kbd {
-  padding: 2px 4px;
-  font-size: 90%;
-  color: #fff;
-  background-color: #333;
-  border-radius: 3px;
-  box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.25);
-}
-kbd kbd {
-  padding: 0;
-  font-size: 100%;
-  font-weight: bold;
-  box-shadow: none;
-}
-
-.pre-scrollable {
-  max-height: 340px;
-  overflow-y: scroll;
-}
-
 .container {
   margin-right: auto;
   margin-left: auto;
@@ -545,20 +317,6 @@ kbd kbd {
   .container {
     width: 1200px;
   }
-}
-
-.container-fluid {
-  margin-right: auto;
-  margin-left: auto;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-.container-fluid:before, .container-fluid:after {
-  content: " ";
-  display: table;
-}
-.container-fluid:after {
-  clear: both;
 }
 
 .row {
@@ -1803,9 +1561,6 @@ Icons as functions
   background-color: #fff;
 }
 
-/*
-Mixins File for Wordpress Theme FAU
-*/
 /*-----------------------------------------------------------------------------------*/
 /* Fonts
 /*-----------------------------------------------------------------------------------*/
@@ -4952,11 +4707,17 @@ table h6 {
 /* Code und Preformated
 /*-----------------------------------------------------------------------------------*/
 code,
-pre {
-  padding: 0 3px 2px;
-  font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
+pre,
+kbd,
+samp {
+  font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
   font-size: 0.875rem;
   line-height: 1.313rem;
+}
+
+code,
+pre {
+  padding: 0 3px 2px;
   color: var(--color-Text);
   background-color: var(--color-StandardHellgrau);
 }
@@ -4994,6 +4755,25 @@ pre code {
   white-space: pre-wrap;
   background-color: transparent;
   border: 0;
+}
+
+.pre-scrollable {
+  max-height: 340px;
+  overflow-y: scroll;
+}
+
+kbd {
+  padding: 2px 4px;
+  color: var(--color-KontrastHell);
+  background-color: var(--color-KontrastDunkel);
+  border-radius: 3px;
+  background-clip: padding-box;
+  box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.25);
+}
+kbd kbd {
+  padding: 0;
+  font-weight: bold;
+  box-shadow: none;
 }
 
 /*-----------------------------------------------------------------------------------*/
@@ -9666,7 +9446,6 @@ body.nav-toggled #headerwrapper {
 .nav > li.has-sub:hover > a {
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
-  background-clip: padding-box;
 }
 body:not(.mainnav-forceclick):not(.ismobile) .nav > li.has-sub > a:focus ~ .nav-flyout,
 body:not(.mainnav-forceclick):not(.ismobile) .nav > li.has-sub > [type=button]:focus ~ .nav-flyout, body:not(.mainnav-forceclick):not(.ismobile) .nav > li.has-sub:hover .nav-flyout {
