--- a/src/sass/plugins/_fau-oembed.scss
+++ b/src/sass/plugins/_fau-oembed.scss
@@ -7,7 +7,11 @@ and open the template in the editor.
     Created on : 28.02.2019, 09:46:25
     Author     : unrz59
 */
-
+.fau-oembed {
+    iframe {
+	max-width: 100%;
+    }
+}
 #content .fau-oembed {
 	margin: 5px 0 20px 0;
 	
