--- a/src/sass/structure/content/_news-items.scss
+++ b/src/sass/structure/content/_news-items.scss
@@ -71,12 +71,16 @@
 	
 	
 	.blogroll-image-3-2 & {
-	    img, svg {
-	//	aspect-ratio: 3 / 2;
-		max-width: 300px;
+	    img, svg {	
+		max-width: 100%;
 		max-height: 200px;
-		object-fit: contain;
-
+		object-fit: cover;
+		
+		@media (min-width: $screen-xs) {
+			max-width: 300px;
+			max-height: 200px;
+			object-fit: contain;
+		}
 	    }
 	}
 }
