--- a/src/sass/plugins/_rrze-elements.scss
+++ b/src/sass/plugins/_rrze-elements.scss
@@ -250,7 +250,6 @@ button.expand-all {
 /* Alerts
 /*-----------------------------------------------------------------------------------*/
 #content .alert {
-    padding: 2%;
     h2 {
 	    padding-top: 7px;
     }
@@ -260,6 +259,13 @@ button.expand-all {
     &.alert-danger p {
 	    font-size: 1.1rem;
     }
+    
+    margin-left: -$fau-gutter-halfwidth;
+    margin-right: -$fau-gutter-halfwidth;
+     @media (min-width: $screen-sm) {
+	 margin-left: 0;
+	 margit-right: 0;
+     }
 }
 
 
@@ -329,3 +335,37 @@ button.expand-all {
 	height: 2rem;
     }
 }
+
+/*----------------------------------------------------------------------------*/
+/* Images in Columns
+/*----------------------------------------------------------------------------*/
+main, aside, .portalpage-sidebar, .widget {
+    .elements-columns,
+    .four-columns-one,
+    .four-columns-two,
+    .four-columns-three,
+    .three-columns-one,
+    .three-columns-two,
+    .three-columns-three,
+    .accordion {
+	    figure {
+
+		&.alignleft,
+		&.alignright,
+		&.alignnone,
+		&.aligncenter {
+		    @media (max-width: $screen-sm) {
+			margin: 1rem auto;
+			width: 100%;
+			max-width: 100%;
+			
+			img {
+			    width: 100%;
+			    max-width: 100%;
+			}
+		    }
+		    
+		}
+	    }
+    }
+ }
