--- a/src/sass/plugins/_mimetype-link-icons.scss
+++ b/src/sass/plugins/_mimetype-link-icons.scss
@@ -10,3 +10,8 @@
 	padding-right: 20px !important;
     }
 }
+
+a.media-img.mtli_attachment {
+    background: none !important; 
+    padding-left: 0 !important;
+}
