--- a/src/sass/elements/_images.scss
+++ b/src/sass/elements/_images.scss
@@ -66,38 +66,42 @@ svg {
 
 main {
     img {
-        @include box-shadow(none);
-        @media (min-width: $screen-sm) {
-            @include box-shadow(0 1px 2px rgba(0, 0, 0, 0.3));
-        }
+	@include box-shadow(none);
+	@media (min-width: $screen-xs) {
+	    @include box-shadow(0 1px 2px rgba(0, 0, 0, 0.3));
+	}
 
         &.shadow {
-       //     @include box-shadow(4px 4px 4px rgba(0, 0, 0, 0.5));
            filter: drop-shadow(2px 2px 7px rgba(0,0,0,0.5));
            box-shadow: none;
         }
 
         &.thickborder {
-            border: 1px solid black;
+            border: 2px solid var(--color-ContentBorders);
             @include border-radius(2px);
         }
 
-        &.borderless {
-            border: none;
-        }
-
+        &.borderless,
         &.noshadow {
             box-shadow: none;
         }
 
-        &.size-full,
-        &.aligncenter {
-            @media (max-width: $screen-xs) {
-                width: 100%;
-                max-width: 100vw;
-            }
-        }
-
+       
+	&.rounded {
+	    @include border-radius(6px);
+	}
+	&.polaroid {
+	    padding: 5px;
+	    background-color: var(--color-MainBackground);
+	    border: 1px solid rgba(0, 0, 0, 0.2);
+	    @include box-shadow(0 1px 3px rgba(0, 0, 0, 0.1));
+	}
+	&.circle {
+	    @include border-radius(50%);
+	    aspect-ratio: 1 / 1;
+	    object-fit: contain;
+	    margin: 2px;
+	}
 
     }
     
@@ -158,9 +162,9 @@ figcaption {
 	@include px2rem($font-size-image-caption);
 	padding: 0.3rem;
 	
-	 @media (min-width: $screen-xs) {
-	     padding: 0.3rem 0 0.3rem 0;
-	 }
+	@media (min-width: $screen-xs) {
+	     padding: 0.3rem 0;
+	}
 }
 
 
