--- a/src/sass/mixins/_mixins.scss
+++ b/src/sass/mixins/_mixins.scss
@@ -178,7 +178,6 @@ Mixins File for Wordpress Theme FAU
     text-decoration: underline;
     color: currentcolor;
     text-decoration-color:  currentcolor;
-    box-shadow: none;
    
     &:hover,
     &:focus {
@@ -186,9 +185,21 @@ Mixins File for Wordpress Theme FAU
         text-decoration: underline;
         color: currentcolor;
         text-decoration-color: currentcolor;
-	box-shadow: none;
     }
 }
+
+@mixin default-img() {
+    
+    @include box-shadow(none);
+    @media (min-width: $screen-xs) {
+        @include box-shadow(0 1px 2px rgba(0, 0, 0, 0.3));
+    }
+    padding: 2px;
+    border: 0;
+  
+}
+
+
 
 @mixin styledcontentlink() {
     cursor: pointer;
