--- a/src/sass/plugins/_mimetype-link-icons.scss
+++ b/src/sass/plugins/_mimetype-link-icons.scss
@@ -11,7 +11,7 @@
     }
 }
 
-a.media-img.mtli_attachment {
+a.mtli_attachment {
     background: none !important; 
     padding-left: 0 !important;
 }
