--- a/style.css
+++ b/style.css
@@ -9217,7 +9217,7 @@ body.embedded .news-item .news-meta {
 #meta .header-row {
   justify-content: space-between;
   align-items: center;
-  height: 50px;
+  min-height: 50px;
   padding: 4px 0;
 }
 @media (min-width: 768px) {
