--- a/src/sass/elements/_forms.scss
+++ b/src/sass/elements/_forms.scss
@@ -61,7 +61,7 @@ input {
 	}
 	&[type="password"],
 	&[type="text"] {
-	    width: 25rem;
+	    width: clamp(10rem,25rem,100%);
 	    margin: 0 0 0.5rem 0;
 	}
 	
@@ -148,7 +148,7 @@ textarea {
 	border: 1px solid var(--color-ContentBorders);
 	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
 	transition: border linear 0.2s, box-shadow linear 0.2s;
-	width: 25rem;
+	width: clamp(10rem,25rem,100%);
 	height: auto;
 	min-height: 3rem;
 	 
