--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /*!
 Theme Name: FAU-Einrichtungen
-Version: 2.0.47-1
+Version: 2.0.47-2
 Requires at least: 5.8
 Tested up to: 6.0
 Requires PHP: 7.4
@@ -6410,7 +6410,7 @@ input[type=color] {
   height: 1.5rem;
 }
 input[type=password], input[type=text] {
-  width: 25rem;
+  width: clamp(10rem, 25rem, 100%);
   margin: 0 0 0.5rem 0;
 }
 input[type=datetime], input[type=datetime-local], input[type=date], input[type=month], input[type=time], input[type=week], input[type=number] {
@@ -6505,7 +6505,7 @@ textarea {
   border: 1px solid var(--color-ContentBorders);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   transition: border linear 0.2s, box-shadow linear 0.2s;
-  width: 25rem;
+  width: clamp(10rem, 25rem, 100%);
   height: auto;
   min-height: 3rem;
   padding: 0.5rem;
