--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -366,6 +366,7 @@ $screen-xxs: 320px;
 
 $slider-maxwidth: 1260px;
 $slider-maxheight: 350px;
+$slider-arrow-width: 40px;
 
 $wordpress-adminbar-break: 783px;
 // WordPress Adminbar breaks to small
