--- a/src/sass/structure/header/_meta.scss
+++ b/src/sass/structure/header/_meta.scss
@@ -24,6 +24,7 @@
         justify-content: space-between;
         align-items: center;
         min-height: 50px;
+	
         padding: 4px 0;
         @media (min-width: $screen-sm) {
             padding: 5px 0;
@@ -33,6 +34,10 @@
             content: '';
             width: 52px;
         }
+	
+	.wp-custom-logo & {
+	    height: 50px;
+	}
     }
 }
 
