--- a/print.css
+++ b/print.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /*!
 Theme Name: FAU-Einrichtungen
-Version: 2.0.47-7
+Version: 2.0.47
 Requires at least: 5.8
 Tested up to: 6.0
 Requires PHP: 7.4
