--- a/css/fau-theme-admin.css
+++ b/css/fau-theme-admin.css
@@ -1506,7 +1506,6 @@ a.bg-danger:focus {
   box-sizing: border-box;
   -webkit-user-select: none;
      -moz-user-select: none;
-      -ms-user-select: none;
           user-select: none;
   touch-action: pan-y;
 }
@@ -1595,6 +1594,8 @@ Mixins File for Wordpress Theme FAU
 /*-----------------------------------------------------------------------------------*/
 html {
   font-size: 90%;
+  -webkit-font-smooth: antialiased;
+  -webkit-text-size-adjust: 100%;
 }
 @media (min-width: 360px) {
   html {
@@ -4548,7 +4549,6 @@ Misc Admin CSS
   width: 64px;
   -webkit-user-select: none;
      -moz-user-select: none;
-      -ms-user-select: none;
           user-select: none;
   float: right;
 }
@@ -4964,12 +4964,10 @@ UI Elements, from jquery UI CSS
 }
 .edit-post-visual-editor .editor-block-list__block h1.mce-content-body, .edit-post-visual-editor .editor-block-list__block h2.mce-content-body {
   -webkit-hyphens: none;
-      -ms-hyphens: none;
           hyphens: none;
 }
 .edit-post-visual-editor .editor-block-list__block h3.mce-content-body, .edit-post-visual-editor .editor-block-list__block h4.mce-content-body, .edit-post-visual-editor .editor-block-list__block h5.mce-content-body, .edit-post-visual-editor .editor-block-list__block h6.mce-content-body {
   -webkit-hyphens: auto;
-      -ms-hyphens: auto;
           hyphens: auto;
 }
 .edit-post-visual-editor .editor-block-list__block h1.mce-content-body {
@@ -5058,7 +5056,6 @@ table .edit-post-visual-editor .editor-block-list__block h6 {
 }
 .edit-post-visual-editor .editor-block-list__block p {
   -webkit-hyphens: auto;
-      -ms-hyphens: auto;
           hyphens: auto;
 }
 .edit-post-visual-editor .editor-block-list__block p.lead-in {
